--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,8 @@
-[package]
-name = "affinidi-tdk"
+[workspace]
+members = ["affinidi-tdk-common", "affinidi-tdk", "affinidi-meeting-place"]
+resolver = "3"
+
+[workspace.package]
 description = "Affinidi Trust Development Kit. A Rust library for building secure, privacy-preserving, and interoperable applications."
 version = "0.1.0"
 edition = "2024"
@@ -10,6 +13,5 @@ license = "Apache-2.0"
 keywords = ["ssi", "affinidi"]
 repository = "https://github.com/affinidi/affinidi-tdk-rs"
 publish = true
-resolver = "3"
 
-[dependencies]
+[workspace.dependencies]
