--- a/affinidi-tdk-common/Cargo.toml
+++ b/affinidi-tdk-common/Cargo.toml
@@ -12,3 +12,8 @@ repository.workspace = true
 publish.workspace = true
 
 [dependencies]
+reqwest.workspace = true
+serde.workspace = true
+serde_json.workspace = true
+thiserror.workspace = true
+tracing.workspace = true
