--- a/affinidi-tdk-common/affinidi-secrets-resolver/Cargo.toml
+++ b/affinidi-tdk-common/affinidi-secrets-resolver/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "affinidi-tdk"
-description.workspace = true
+name = "affinidi-secrets-resolver"
+description = "Common utilities for Affinidi Trust Development Kit."
 version.workspace = true
 edition.workspace = true
 authors.workspace = true
@@ -12,7 +12,7 @@ repository.workspace = true
 publish.workspace = true
 
 [dependencies]
-affinidi-did-resolver-cache-sdk.workspace = true
-affinidi-messaging-sdk.workspace = true
-affinidi-tdk-common.workspace = true
-reqwest.workspace = true
+serde.workspace = true
+serde_json.workspace = true
+thiserror.workspace = true
+tracing.workspace = true
