--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,17 +18,26 @@ license = "Apache-2.0"
 keywords = ["ssi", "affinidi"]
 repository = "https://github.com/affinidi/affinidi-tdk-rs"
 publish = true
+rust-version = "1.85.0"
 
 [workspace.dependencies]
 affinidi-messaging-sdk = { version = "0.10", path = "../affinidi-messaging/affinidi-messaging-sdk" }
-affinidi-did-resolver-cache-sdk = { version = "~0.3", features = ["network"] }
+affinidi-messaging-didcomm = { version = "0.10", path = "../affinidi-messaging/affinidi-messaging-didcomm" }
+affinidi-did-resolver-cache-sdk = { version = "~0.4", features = ["network"] }
 affinidi-tdk-common = { path = "affinidi-tdk-common" }
-affinidi-secrets-resolver = { path = "affinidi-tdk-common/affinidi-secrets-manager" }
+affinidi-secrets-resolver = { path = "affinidi-tdk-common/affinidi-secrets-resolver" }
+base64 = "0.22"
 reqwest = { version = "0.12", features = ["rustls-tls-manual-roots", "json"] }
 serde = { version = "1.0", features = ["derive", "rc"] }
 serde_json = "1.0"
+rustls = { version = "0.23", default-features = false, features = [
+    "aws_lc_rs",
+    "tls12",
+] }
+rustls-platform-verifier = "0.5"
 thiserror = "2.0"
 tracing = { version = "0.1", features = [
     "max_level_debug",
     "release_max_level_info",
 ] }
+uuid = { version = "1.15", features = ["v4", "fast-rng"] }
