--- a/affinidi-tdk-common/Cargo.toml
+++ b/affinidi-tdk-common/Cargo.toml
@@ -10,8 +10,11 @@ license.workspace = true
 keywords.workspace = true
 repository.workspace = true
 publish.workspace = true
+rust-version.workspace = true
 
 [dependencies]
+affinidi-secrets-resolver.workspace = true
+affinidi-did-resolver-cache-sdk.workspace = true
 reqwest.workspace = true
 serde.workspace = true
 serde_json.workspace = true
