--- a/affinidi-tdk-common/affinidi-secrets-resolver/Cargo.toml
+++ b/affinidi-tdk-common/affinidi-secrets-resolver/Cargo.toml
@@ -10,6 +10,7 @@ license.workspace = true
 keywords.workspace = true
 repository.workspace = true
 publish.workspace = true
+rust-version.workspace = true
 
 [dependencies]
 serde.workspace = true
