--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ affinidi-did-resolver-cache-sdk = { version = "~0.4", features = ["network"] }
 affinidi-tdk-common = { path = "affinidi-tdk-common" }
 affinidi-secrets-resolver = { path = "affinidi-tdk-common/affinidi-secrets-resolver" }
 base64 = "0.22"
+did-peer = "0.4"
 reqwest = { version = "0.12", features = ["rustls-tls-manual-roots", "json"] }
 serde = { version = "1.0", features = ["derive", "rc"] }
 serde_json = "1.0"
@@ -35,6 +36,7 @@ rustls = { version = "0.23", default-features = false, features = [
     "tls12",
 ] }
 rustls-platform-verifier = "0.5"
+ssi = { version = "0.10" }
 thiserror = "2.0"
 tracing = { version = "0.1", features = [
     "max_level_debug",
