--- a/affinidi-tdk-common/affinidi-secrets-resolver/Cargo.toml
+++ b/affinidi-tdk-common/affinidi-secrets-resolver/Cargo.toml
@@ -15,5 +15,6 @@ rust-version.workspace = true
 [dependencies]
 serde.workspace = true
 serde_json.workspace = true
+ssi.workspace = true
 thiserror.workspace = true
 tracing.workspace = true
