--- a/affinidi-tdk/Cargo.toml
+++ b/affinidi-tdk/Cargo.toml
@@ -23,11 +23,13 @@ affinidi-messaging-didcomm.workspace = true
 affinidi-tdk-common.workspace = true
 affinidi-secrets-resolver.workspace = true
 base64.workspace = true
+did-peer.workspace = true
 reqwest.workspace = true
 rustls.workspace = true
 rustls-platform-verifier.workspace = true
 serde.workspace = true
 serde_json.workspace = true
+ssi.workspace = true
 thiserror.workspace = true
 tracing.workspace = true
 uuid.workspace = true
