Working DID Authentication

--- a/affinidi-meeting-place/Cargo.toml
+++ b/affinidi-meeting-place/Cargo.toml
@@ -13,3 +13,5 @@ publish.workspace = true
 rust-version.workspace = true
 
 [dependencies]
+affinidi-did-authentication.workspace = true
+tracing.workspace = true
