--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 members = [
     "affinidi-tdk-common",
     "affinidi-tdk-common/affinidi-secrets-resolver",
+    "affinidi-tdk-common/affinidi-did-authentication",
     "affinidi-tdk",
     "affinidi-meeting-place",
 ]
@@ -24,9 +25,13 @@ rust-version = "1.85.0"
 affinidi-messaging-sdk = { version = "0.10", path = "../affinidi-messaging/affinidi-messaging-sdk" }
 affinidi-messaging-didcomm = { version = "0.10", path = "../affinidi-messaging/affinidi-messaging-didcomm" }
 affinidi-did-resolver-cache-sdk = { version = "~0.4", features = ["network"] }
-affinidi-tdk-common = { path = "affinidi-tdk-common" }
-affinidi-secrets-resolver = { path = "affinidi-tdk-common/affinidi-secrets-resolver" }
+affinidi-tdk-common = { version = "0.1", path = "affinidi-tdk-common" }
+affinidi-secrets-resolver = { version = "0.1", path = "affinidi-tdk-common/affinidi-secrets-resolver" }
+affinidi-did-authentication = { version = "0.1", path = "affinidi-tdk-common/affinidi-did-authentication" }
+affinidi-meeting-place = { version = "0.1", path = "affinidi-meeting-place" }
 base64 = "0.22"
+clap = { version = "4.5", features = ["derive"] }
+chrono = "0.4"
 did-peer = "0.4"
 reqwest = { version = "0.12", features = ["rustls-tls-manual-roots", "json"] }
 serde = { version = "1.0", features = ["derive", "rc"] }
@@ -38,8 +43,14 @@ rustls = { version = "0.23", default-features = false, features = [
 rustls-platform-verifier = "0.5"
 ssi = { version = "0.10" }
 thiserror = "2.0"
+tokio = { version = "1.44", features = ["full"] }
 tracing = { version = "0.1", features = [
     "max_level_debug",
     "release_max_level_info",
+] }
+tracing-subscriber = { version = "0.3", features = [
+    "env-filter",
+    "fmt",
+    "json",
 ] }
 uuid = { version = "1.15", features = ["v4", "fast-rng"] }
