--- a/affinidi-tdk-common/affinidi-did-authentication/Cargo.toml
+++ b/affinidi-tdk-common/affinidi-did-authentication/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "affinidi-tdk-common"
-description = "Common utilities for Affinidi Trust Development Kit."
+name = "affinidi-did-authentication"
+description = "Using proof of DID ownership to authenticate to services"
 version.workspace = true
 edition.workspace = true
 authors.workspace = true
@@ -13,12 +13,18 @@ publish.workspace = true
 rust-version.workspace = true
 
 [dependencies]
-affinidi-secrets-resolver.workspace = true
+affinidi-tdk-common.workspace = true
+affinidi-messaging-didcomm.workspace = true
 affinidi-did-resolver-cache-sdk.workspace = true
-did-peer.workspace = true
+base64.workspace = true
+chrono.workspace = true
+clap.workspace = true
 reqwest.workspace = true
 rustls.workspace = true
-rustls-platform-verifier.workspace = true
 serde.workspace = true
 serde_json.workspace = true
-thiserror.workspace = true
+ssi.workspace = true
+tokio.workspace = true
+tracing.workspace = true
+tracing-subscriber.workspace = true
+uuid.workspace = true
