--- a/affinidi-tdk/Cargo.toml
+++ b/affinidi-tdk/Cargo.toml
@@ -13,8 +13,9 @@ publish.workspace = true
 rust-version.workspace = true
 
 [features]
-default = ["messaging"]
+default = ["messaging", "meeting-place"]
 messaging = ["dep:affinidi-messaging-sdk"]
+meeting-place = ["dep:affinidi-meeting-place"]
 
 [dependencies]
 affinidi-did-resolver-cache-sdk.workspace = true
@@ -22,14 +23,9 @@ affinidi-messaging-sdk = { workspace = true, optional = true }
 affinidi-messaging-didcomm.workspace = true
 affinidi-tdk-common.workspace = true
 affinidi-secrets-resolver.workspace = true
-base64.workspace = true
+affinidi-meeting-place = { workspace = true, optional = true }
 did-peer.workspace = true
 reqwest.workspace = true
 rustls.workspace = true
 rustls-platform-verifier.workspace = true
-serde.workspace = true
-serde_json.workspace = true
 ssi.workspace = true
-thiserror.workspace = true
-tracing.workspace = true
-uuid.workspace = true
