--- a/crates/affinidi-did-authentication/Cargo.toml
+++ b/crates/affinidi-did-authentication/Cargo.toml
@@ -13,18 +13,16 @@ publish.workspace = true
 rust-version.workspace = true
 
 [dependencies]
-affinidi-tdk-common.workspace = true
 affinidi-messaging-didcomm.workspace = true
 affinidi-did-resolver-cache-sdk.workspace = true
+affinidi-secrets-resolver.workspace = true
 base64.workspace = true
 chrono.workspace = true
-clap.workspace = true
 reqwest.workspace = true
-rustls.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 ssi.workspace = true
+thiserror.workspace = true
 tokio.workspace = true
 tracing.workspace = true
-tracing-subscriber.workspace = true
 uuid.workspace = true
