--- a/crates/affinidi-tdk/Cargo.toml
+++ b/crates/affinidi-tdk/Cargo.toml
@@ -22,10 +22,16 @@ affinidi-did-resolver-cache-sdk.workspace = true
 affinidi-messaging-sdk = { workspace = true, optional = true }
 affinidi-messaging-didcomm.workspace = true
 affinidi-tdk-common.workspace = true
+affinidi-did-authentication.workspace = true
 affinidi-secrets-resolver.workspace = true
 affinidi-meeting-place = { workspace = true, optional = true }
+clap.workspace = true
 did-peer.workspace = true
 reqwest.workspace = true
 rustls.workspace = true
 rustls-platform-verifier.workspace = true
+serde_json.workspace = true
 ssi.workspace = true
+tokio.workspace = true
+tracing.workspace = true
+tracing-subscriber.workspace = true
