Ongoing refactoring of TDK

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,10 +28,12 @@ affinidi-messaging-sdk = { version = "0.10", path = "../affinidi-messaging/affin
 affinidi-messaging-didcomm = { version = "0.10", path = "../affinidi-messaging/affinidi-messaging-didcomm" }
 affinidi-did-resolver-cache-sdk = { version = "~0.4", features = ["network"] }
 
+ahash = "0.8"
 base64 = "0.22"
 clap = { version = "4.5", features = ["derive"] }
 chrono = "0.4"
 did-peer = "0.4"
+moka = { version = "0.12", features = ["future"] }
 reqwest = { version = "0.12", features = ["rustls-tls-manual-roots", "json"] }
 serde = { version = "1.0", features = ["derive", "rc"] }
 serde_json = "1.0"
