--- a/crates/affinidi-tdk-common/Cargo.toml
+++ b/crates/affinidi-tdk-common/Cargo.toml
@@ -16,10 +16,14 @@ rust-version.workspace = true
 affinidi-secrets-resolver.workspace = true
 affinidi-did-resolver-cache-sdk.workspace = true
 affinidi-did-authentication.workspace = true
+ahash.workspace = true
 did-peer.workspace = true
+moka.workspace = true
 reqwest.workspace = true
 rustls.workspace = true
 rustls-platform-verifier.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 thiserror.workspace = true
+tokio.workspace = true
+tracing.workspace = true
