Integrating within the TDK and ATM

--- a/crates/affinidi-tdk-common/Cargo.toml
+++ b/crates/affinidi-tdk-common/Cargo.toml
@@ -12,6 +12,10 @@ repository.workspace = true
 publish.workspace = true
 rust-version.workspace = true
 
+[features]
+default = ["messaging"]
+messaging = []
+
 [dependencies]
 affinidi-secrets-resolver.workspace = true
 affinidi-did-resolver-cache-sdk.workspace = true
