--- a/deny.toml
+++ b/deny.toml
@@ -52,6 +52,7 @@ exceptions = [
     { allow = ["Unicode-3.0"], crate = "icu_locid" },
     { allow = ["Unicode-3.0"], crate = "icu_locid_transform" },
     { allow = ["Unicode-3.0"], crate = "icu_locid_transform_data" },
+    { allow = ["Unicode-3.0"], crate = "icu_normalizer" },
     { allow = ["Unicode-3.0"], crate = "icu_normalizer_data" },
     { allow = ["Unicode-3.0"], crate = "icu_properties" },
     { allow = ["Unicode-3.0"], crate = "icu_properties_data" },
