--- a/crates/affinidi-tdk/Cargo.toml
+++ b/crates/affinidi-tdk/Cargo.toml
@@ -21,9 +21,9 @@ meeting-place = ["dep:affinidi-meeting-place"]
 affinidi-did-resolver-cache-sdk.workspace = true
 affinidi-messaging-sdk = { workspace = true, optional = true }
 affinidi-messaging-didcomm.workspace = true
-affinidi-tdk-common.workspace = true
 affinidi-did-authentication.workspace = true
-affinidi-secrets-resolver.workspace = true
+affinidi-tdk-common = { version = "0.1.0" }
+affinidi-secrets-resolver = { version = "0.1.0" }
 affinidi-meeting-place = { workspace = true, optional = true }
 clap.workspace = true
 did-peer.workspace = true
