--- a/crates/affinidi-did-authentication/Cargo.toml
+++ b/crates/affinidi-did-authentication/Cargo.toml
@@ -15,7 +15,7 @@ rust-version.workspace = true
 [dependencies]
 affinidi-messaging-didcomm.workspace = true
 affinidi-did-resolver-cache-sdk.workspace = true
-affinidi-secrets-resolver = { version = "0.1.2" }
+affinidi-secrets-resolver.workspace = true
 base64.workspace = true
 chrono.workspace = true
 reqwest.workspace = true
