--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,16 +16,13 @@ publish = true
 rust-version = "1.85.0"
 
 [workspace.dependencies]
-# Local Crates
 affinidi-meeting-place = { version = "0.1.5", path = "./crates/affinidi-meeting-place" }
-# pinned versions (previous ones) are used due to circular dependencies
-affinidi-tdk-common = { version = "0.1.4" }
-affinidi-secrets-resolver = { version = "0.1.4" }
-affinidi-did-authentication = { version = "0.1.4" }
+affinidi-tdk = { version = "0.1.5", path = "./crates/affinidi-tdk" }
+affinidi-tdk-common = { version = "0.1.5", path = "./crates/affinidi-tdk-common" }
+affinidi-secrets-resolver = { version = "0.1.5", path = "./crates/affinidi-secrets-resolver" }
+affinidi-did-authentication = { version = "0.1.5", path = "./crates/affinidi-did-authentication" }
 
 # Affinidi External Crates
-affinidi-messaging-sdk = { version = "0.10.0" }
-affinidi-messaging-didcomm = { version = "0.10.0" }
 affinidi-did-resolver-cache-sdk = { version = "~0.5", features = ["network"] }
 
 ahash = "0.8"
