--- a/crates/affinidi-tdk/Cargo.toml
+++ b/crates/affinidi-tdk/Cargo.toml
@@ -13,14 +13,11 @@ publish.workspace = true
 rust-version.workspace = true
 
 [features]
-default = ["messaging", "meeting-place"]
-messaging = ["dep:affinidi-messaging-sdk"]
+default = ["meeting-place"]
 meeting-place = ["dep:affinidi-meeting-place"]
 
 [dependencies]
 affinidi-did-resolver-cache-sdk.workspace = true
-affinidi-messaging-sdk = { workspace = true, optional = true }
-affinidi-messaging-didcomm.workspace = true
 affinidi-did-authentication.workspace = true
 affinidi-tdk-common.workspace = true
 affinidi-secrets-resolver.workspace = true
