Fixing repository setting in Cargo.toml's

--- a/crates/affinidi-messaging/affinidi-messaging-helpers/Cargo.toml
+++ b/crates/affinidi-messaging/affinidi-messaging-helpers/Cargo.toml
@@ -10,6 +10,7 @@ publish.workspace = true
 license.workspace = true
 readme = "README.md"
 rust-version.workspace = true
+repository.workspace = true
 
 [[bin]]
 name = "setup_environment"
