--- a/crates/affinidi-meeting-place/Cargo.toml
+++ b/crates/affinidi-meeting-place/Cargo.toml
@@ -8,7 +8,7 @@ readme.workspace = true
 homepage.workspace = true
 license.workspace = true
 keywords = ["ssi", "ATM", "affinidi", "DIDComm"]
-repository = "https://github.com/affinidi/affinidi-tdk-rs/affinidi-meeting-place"
+repository.workspace = true
 publish.workspace = true
 rust-version.workspace = true
 
