--- a/crates/affinidi-messaging/affinidi-messaging-mediator/affinidi-messaging-mediator-processors/Cargo.toml
+++ b/crates/affinidi-messaging/affinidi-messaging-mediator/affinidi-messaging-mediator-processors/Cargo.toml
@@ -10,6 +10,7 @@ publish.workspace = true
 license.workspace = true
 readme = "README.md"
 rust-version.workspace = true
+repository.workspace = true
 
 [lib]
 path = "src/lib/lib.rs"
