--- a/deny.toml
+++ b/deny.toml
@@ -11,7 +11,6 @@ multiple-versions = "allow"
 # We want really high confidence when inferring licenses from text
 confidence-threshold = 0.93
 allow = [
-    "Apache-1.1",
     "Apache-2.0",
     "BSL-1.0",
     "BSD-1-Clause",
@@ -19,35 +18,41 @@ allow = [
     "BSD-3-Clause",
     "0BSD",
     "CC0-1.0",
-    "WTFPL",
-    "Fair",
-    "Intel",
     "ISC",
     "MIT-0",
     "MIT",
-    "MIT-Modern-Variant",
-    "MulanPSL-2.0",
-    "Multics",
-    "Naumen",
-    "PHP-3.01",
-    "PostgreSQL",
-    "Python-2.0",
-    "OFL-1.1",
-    "MirOS",
-    "Unlicense",
-    "Unicode-DFS-2016",
-    "UPL-1.0",
     "NCSA",
+    "Unlicense",
     "Zlib",
-    "AFL-2.1",
-    "OpenSSL",
-    "ISC",
-    "MPL-2.0",
-    "W3C-20150513",
+# As stated here https://embarkstudios.github.io/cargo-deny/checks/licenses/cfg.html#spdx-identifiers
+# 3.11 versions of SPDX License List was used and below licenses are not included there.
+# They are commented to avoid "[license-not-encountered]" warnings.
+#    "Apache-1.1",
+#    "WTFPL",
+#    "Fair",
+#    "Intel",
+#    "MIT-Modern-Variant",
+#    "MulanPSL-2.0",
+#    "Multics",
+#    "Naumen",
+#    "PHP-3.01",
+#    "PostgreSQL",
+#    "Python-2.0",
+#    "OFL-1.1",
+#    "MirOS",
+#    "UPL-1.0",
+#    "Unicode-DFS-2016",
+#    "AFL-2.1",
 ]
 
 exceptions = [
-    { allow = ["OpenSSL"], crate = "ring" },
+    { allow = ["OpenSSL"], crate = "aws-lc-sys" },
+    { allow = ["MPL-2.0"], crate = "bitmaps" },
+    { allow = ["MPL-2.0"], crate = "im" },
+    { allow = ["MPL-2.0"], crate = "webpki-roots" },
+    { allow = ["MPL-2.0"], crate = "webpki-root-certs" },
+    { allow = ["CC-BY-SA-3.0", "MPL-2.0"], crate = "sized-chunks" },
+    # TODO: align
     { allow = ["Unicode-3.0"], crate = "icu_collections" },
     { allow = ["Unicode-3.0"], crate = "icu_locid" },
     { allow = ["Unicode-3.0"], crate = "icu_locid_transform" },
@@ -59,6 +64,7 @@ exceptions = [
     { allow = ["Unicode-3.0"], crate = "icu_provider" },
     { allow = ["Unicode-3.0"], crate = "icu_provider_macros" },
     { allow = ["Unicode-3.0"], crate = "litemap" },
+    { allow = ["Apache-2.0 WITH LLVM-exception", "Unicode-3.0"], crate = "target-lexicon" },
     { allow = ["Unicode-3.0"], crate = "tinystr" },
     { allow = ["Unicode-3.0"], crate = "unicode-ident" },
     { allow = ["Unicode-3.0"], crate = "writeable" },
