--- a/crates/affinidi-tdk/affinidi-tdk/Cargo.toml
+++ b/crates/affinidi-tdk/affinidi-tdk/Cargo.toml
@@ -27,17 +27,14 @@ affinidi-secrets-resolver.workspace = true
 affinidi-meeting-place = { workspace = true, optional = true }
 did-peer.workspace = true
 
-
+# External Crates
 clap = { version = "4.5", features = ["derive"] }
-reqwest = { version = "0.12", features = ["rustls-tls-manual-roots", "json"] }
 rustls = { version = "0.23", default-features = false, features = [
     "aws_lc_rs",
     "tls12",
 ] }
-rustls-platform-verifier = "0.5"
 serde_json = "1.0"
 ssi = { version = "0.10" }
-thiserror = "2.0"
 tokio = { version = "1.44", features = ["full"] }
 tracing = { version = "0.1", features = [
     "max_level_debug",
