--- a/crates/affinidi-messaging/affinidi-messaging-mediator/.cargo/config.toml
+++ b/crates/affinidi-messaging/affinidi-messaging-mediator/.cargo/config.toml
@@ -1,2 +1,5 @@
 [build]
-rustflags = ["--cfg", "tracing_unstable"] # needed for object logging
+rustflags = [
+    "-D", "warnings",
+    "--cfg", "tracing_unstable", # needed for object logging
+]
