--- a/crates/affinidi-meeting-place/Cargo.toml
+++ b/crates/affinidi-meeting-place/Cargo.toml
@@ -14,4 +14,26 @@ rust-version.workspace = true
 
 [dependencies]
 affinidi-did-authentication.workspace = true
+affinidi-tdk-common.workspace = true
+
+reqwest = { version = "0.12", features = ["rustls-tls-manual-roots", "json"] }
+serde = { version = "1.0", features = ["derive", "rc"] }
+serde_json = "1.0"
+thiserror = "2.0"
 tracing = "0.1"
+
+[dev-dependencies]
+affinidi-did-resolver-cache-sdk.workspace = true
+affinidi-secrets-resolver.workspace = true
+
+clap = { version = "4.5", features = ["derive"] }
+rustls = { version = "0.23", default-features = false, features = [
+    "aws_lc_rs",
+    "tls12",
+] }
+tokio = { version = "1.44", features = ["full"] }
+tracing-subscriber = { version = "0.3", features = [
+    "env-filter",
+    "fmt",
+    "json",
+] }
