--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -10,5 +10,6 @@ jobs:
     uses: affinidi/pipeline-rust/.github/workflows/release.yaml@main
     secrets: inherit
     with:
+      rustflags: "-D warnings --cfg tracing_unstable"
       auditIgnore: "RUSTSEC-2022-0040,RUSTSEC-2023-0071,RUSTSEC-2024-0373"
       release_dry_run: false
