Working in motion

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,5 +1,6 @@
 [build]
 rustflags = [
-    "-D", "warnings",
-    "--cfg", "tracing_unstable", # needed for object logging
+    # "-D", "warnings",
+    "--cfg",
+    "tracing_unstable", # needed for object logging
 ]
