--- a/crates/affinidi-meeting-place/Cargo.toml
+++ b/crates/affinidi-meeting-place/Cargo.toml
@@ -15,15 +15,20 @@ rust-version.workspace = true
 [dependencies]
 affinidi-did-authentication.workspace = true
 affinidi-tdk-common.workspace = true
+affinidi-messaging-didcomm.workspace = true
+affinidi-did-resolver-cache-sdk.workspace = true
 
+base64 = "0.22"
+chrono = "0.4"
 reqwest = { version = "0.12", features = ["rustls-tls-manual-roots", "json"] }
 serde = { version = "1.0", features = ["derive", "rc"] }
 serde_json = "1.0"
+ssi = "0.10"
 thiserror = "2.0"
 tracing = "0.1"
+uuid = "1.16"
 
 [dev-dependencies]
-affinidi-did-resolver-cache-sdk.workspace = true
 affinidi-secrets-resolver.workspace = true
 
 clap = { version = "4.5", features = ["derive"] }
