--- a/crates/affinidi-messaging/affinidi-messaging-helpers/Cargo.toml
+++ b/crates/affinidi-messaging/affinidi-messaging-helpers/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "affinidi-messaging-helpers"
-version = "0.10.1"
+version = "0.10.2"
 description = "Affinidi Messaging Helpers"
 edition.workspace = true
 authors.workspace = true
@@ -61,3 +61,6 @@ tracing-subscriber = { version = "0.3", features = [
     "valuable",
 ] }
 uuid = { version = "1.15", features = ["v4", "fast-rng"] }
+
+[dev-dependencies]
+affinidi-tdk.workspace = true
