--- a/crates/affinidi-messaging/affinidi-messaging-sdk/Cargo.toml
+++ b/crates/affinidi-messaging/affinidi-messaging-sdk/Cargo.toml
@@ -16,6 +16,7 @@ repository.workspace = true
 # Affinidi Crates
 affinidi-tdk-common.workspace = true
 affinidi-messaging-didcomm.workspace = true
+affinidi-did-authentication.workspace = true
 
 # External Crates
 ahash = { version = "0.8", features = ["serde"] }
