--- a/crates/affinidi-messaging/affinidi-messaging-mediator/Cargo.toml
+++ b/crates/affinidi-messaging/affinidi-messaging-mediator/Cargo.toml
@@ -60,6 +60,7 @@ serde = { version = "1.0", features = ["derive", "rc"] }
 serde_json = "1.0"
 sha256 = "1.6"
 ssi = { version = "0.10" }
+subtle = "2.6"
 tokio = { version = "1.44", features = ["full"] }
 tokio-stream = "0.1"
 toml = "0.8"
