--- a/crates/affinidi-messaging/affinidi-messaging-text-client/Cargo.toml
+++ b/crates/affinidi-messaging/affinidi-messaging-text-client/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "affinidi-messaging-text-client"
-version = "0.10.4"
+version = "0.10.5"
 description = "Affinidi Messaging SDK"
 edition.workspace = true
 authors.workspace = true
@@ -36,6 +36,7 @@ ratatui-image = { version = "5", features = ["crossterm", "image-defaults"] }
 reqwest = { version = "0.12", features = ["rustls-tls-manual-roots", "json"] }
 serde = { version = "1.0", features = ["derive", "rc"] }
 serde_json = "1.0"
+sha256 = "1.6"
 ssi = { version = "0.10" }
 textwrap = "0.16"
 tokio = { version = "1.44", features = ["full"] }
