--- a/crates/affinidi-meeting-place/Cargo.toml
+++ b/crates/affinidi-meeting-place/Cargo.toml
@@ -26,7 +26,7 @@ serde_json = "1.0"
 ssi = "0.10"
 thiserror = "2.0"
 tracing = "0.1"
-uuid = "1.16"
+uuid = { version = "1.16", features = ["v4", "fast-rng"] }
 
 [dev-dependencies]
 affinidi-secrets-resolver.workspace = true
