--- a/crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-peer/Cargo.toml
+++ b/crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-peer/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "did-peer"
-version = "0.5.2"
+version = "0.6.0"
 description = "Implementation of the did:peer method in Rust, uses the ssi crate"
 repository.workspace = true
 edition.workspace = true
@@ -24,6 +24,9 @@ ssi = { version = "0.10", features = ["secp384r1"] }
 thiserror = "2.0"
 wasm-bindgen = "0.2"
 wasm-bindgen-futures = "0.4"
+
+# NOTE: To get WASM support, enable the following uuid crate. It needs to have a RNG that works in WASM.
+#uuid = { version = "1.16", features = ["v4", "fast-rng", "js"] }
 
 [dev-dependencies]
 askar-crypto = { version = "0.3", features = ["alloc"] }
