Multiple updates across many crates (#30)
* Added new error type for ephemeral messages with incorrect header

* Bumping mediator crate version to 0.10.5

* * Removed hardcoded MPX endpoints

* Add note for mediator

* Examples and text-client updated for Access Control management

* Staging changes for WebSocket rewrite

* Fixing crate issues due to merge

* Updating DID Resolver crates

* Creating a new mediator DID in setup_environment will properly create a #auth service

* Fixed direct channel creation in text-client

* WebSockets working in text-client

* localhost should be runing in http not https

* Fixing URL

* Implementing DID Peer changes

* Various ACL related changes for text-client

* ACL Change checks added

* Updated mediator version

* Improved error reporting across mediator protocols

* Better error reporting for ACL changes when blocked.

* Non admins cannot self change their self-change ACL flags

* COnvenience features to allow mediator to set all self_change flags

* Bumping crate versions

* Fixing mediator bugs

* Updating crate versions and fixing formatting

--- a/crates/affinidi-messaging/affinidi-messaging-sdk/Cargo.toml
+++ b/crates/affinidi-messaging/affinidi-messaging-sdk/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "affinidi-messaging-sdk"
-version = "0.10.5"
+version = "0.11.0"
 description = "Affinidi Messaging SDK"
 edition.workspace = true
 authors.workspace = true
@@ -21,8 +21,9 @@ affinidi-did-authentication.workspace = true
 # External Crates
 ahash = { version = "0.8", features = ["serde"] }
 base64 = "0.22"
+futures-util = "0.3"
 regex = "1.11"
-reqwest = { version = "0.12", features = ["rustls-tls-manual-roots", "json"] }
+reqwest = { version = "0.12", features = ["rustls-tls-native-roots", "json"] }
 rustls = { version = "0.23", default-features = false, features = [
     "aws_lc_rs",
     "tls12",
@@ -37,14 +38,16 @@ ssi = { version = "0.10" }
 thiserror = "2.0"
 tokio = { version = "1.44", features = ["full"] }
 tokio-rustls = "0.26"
+tokio-stream = "0.1"
+tokio-tungstenite = { version = "0.26", features = ["rustls-tls-native-roots"] }
 tracing = { version = "0.1", features = [
     "max_level_debug",
     "release_max_level_info",
     "valuable",
 ] }
 url = "2.5"
+utf-8 = "0.7"
 uuid = { version = "1.16", features = ["v4", "fast-rng"] }
-web-socket = "0.7"
 
 [dev-dependencies]
 did-peer.workspace = true
