--- a/crates/affinidi-messaging/affinidi-messaging-mediator/conf/mediator.toml
+++ b/crates/affinidi-messaging/affinidi-messaging-mediator/conf/mediator.toml
@@ -88,6 +88,8 @@ mediator_acl_mode = "${MEDIATOR_ACL_MODE:explicit_deny}"
 ### Options:
 ###    - ALLOW_ALL: Allow all operations (sets ACL mode to explicit_deny per DID, DID can self manage their own ACLs)
 ###    - DENY_ALL: Deny all operations (sets ACL mode to explicit_allow per DID)
+###    - ALLOW_ALL_SELF_CHANGE: Allows all *_SELF_CHANGE flags (explicitly set when ALLOW_ALL is set)
+###    - DENY_ALL_SELF_CHANGE: Denies all *_SELF_CHANGE flags (explicitly set when DENY_ALL is set)
 ###    - MODE_EXPLICIT_ALLOW: Per DID Access Control List (ACL) will only allow what is explicitly allowed
 ###    - MODE_EXPLICIT_DENY: Per DID Access Control List (ACL) will only allow everyone except for those explicitly denied
 ###    - MODE_SELF_CHANGE: Allows the DID owner to change the ACL Mode for their own DID Access Control List
@@ -107,15 +109,16 @@ mediator_acl_mode = "${MEDIATOR_ACL_MODE:explicit_deny}"
 ###    - SELF_MANAGE_LIST: DID can self manage their own ACL list (add/remove)
 ###    - SELF_MANAGE_SEND_QUEUE_LIMIT: DID can set their send queue limits (between the queued_messages_soft and queued_messages_hard)
 ###    - SELF_MANAGE_RECEIVE_QUEUE_LIMIT: DID can set their receive queue limits (between the queued_messages_soft and queued_messages_hard)
-###  NOTE: Can be comma separated to allow multiple options
+###  NOTE: Can be comma separated to allow multiple options. ALLOW_ALL or DENY_ALL must always be first!
 global_acl_default = "${GLOBAL_DEFAULT_ACL:ALLOW_ALL}"
+#global_acl_default = "${GLOBAL_DEFAULT_ACL:ALLOW_ALL}"
 
 ### local_direct_delivery_allowed: If true, messages that are addressed to a local DID directly will be delivered
 ### Default: false (all messages must be addressed to the mediator)
 ### NOTE: This can be useful on private networks where you may not want to wrap every message in a forward envelope
 ###       If set to false, then all messages must be addressed to the mediator, and the mediator will handle delivery
 ###       If set to true, then you can either message the mediator or to a local DID directly
-local_direct_delivery_allowed = "${LOCAL_DIRECT_DELIVERY_ALLOWED:false}"
+local_direct_delivery_allowed = "${LOCAL_DIRECT_DELIVERY_ALLOWED:true}"
 
 ### mediator_secrets: Secrets of the mediator
 ### REQUIRED: Location of secrets
