--- a/crates/affinidi-tdk/common/affinidi-tdk-common/Cargo.toml
+++ b/crates/affinidi-tdk/common/affinidi-tdk-common/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "affinidi-tdk-common"
 description = "Common utilities for Affinidi Trust Development Kit."
-version = "0.1.10"
+version = "0.1.11"
 edition.workspace = true
 authors.workspace = true
 readme.workspace = true
@@ -23,6 +23,12 @@ affinidi-secrets-resolver.workspace = true
 did-peer.workspace = true
 
 ahash = "0.8"
+base64 = "0.22"
+keyring = { version = "3.6", features = [
+  "apple-native",
+  "windows-native",
+  "sync-secret-service",
+] }
 moka = { version = "0.12", features = ["future"] }
 reqwest = { version = "0.12", features = ["rustls-tls-manual-roots", "json"] }
 rustls = { version = "0.23", default-features = false, features = [
