--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -13,3 +13,4 @@ jobs:
       rustflags: "-D warnings --cfg tracing_unstable"
       auditIgnore: "RUSTSEC-2022-0040,RUSTSEC-2023-0071,RUSTSEC-2024-0373"
       release_dry_run: false
+      release_debug: true
