--- a/crates/affinidi-messaging/affinidi-messaging-mediator/conf/mediator.toml
+++ b/crates/affinidi-messaging/affinidi-messaging-mediator/conf/mediator.toml
@@ -110,7 +110,8 @@ mediator_acl_mode = "${MEDIATOR_ACL_MODE:explicit_allow}"
 ###    - SELF_MANAGE_SEND_QUEUE_LIMIT: DID can set their send queue limits (between the queued_messages_soft and queued_messages_hard)
 ###    - SELF_MANAGE_RECEIVE_QUEUE_LIMIT: DID can set their receive queue limits (between the queued_messages_soft and queued_messages_hard)
 ###  NOTE: Can be comma separated to allow multiple options. ALLOW_ALL or DENY_ALL must always be first!
-global_acl_default = "${GLOBAL_DEFAULT_ACL:ALLOW_ALL}"
+global_acl_default = "${GLOBAL_DEFAULT_ACL:DENY_ALL,LOCAL,SEND_MESSAGES,RECEIVE_MESSAGES}"
+#global_acl_default = "${GLOBAL_DEFAULT_ACL:ALLOW_ALL}"
 
 ### local_direct_delivery_allowed: If true, messages that are addressed to a local DID directly will be delivered
 ### Default: false (all messages must be addressed to the mediator)
@@ -118,6 +119,11 @@ global_acl_default = "${GLOBAL_DEFAULT_ACL:ALLOW_ALL}"
 ###       If set to false, then all messages must be addressed to the mediator, and the mediator will handle delivery
 ###       If set to true, then you can either message the mediator or to a local DID directly
 local_direct_delivery_allowed = "${LOCAL_DIRECT_DELIVERY_ALLOWED:true}"
+
+### local_direct_delivery_allow_anon: If true, anonymous messages can be delivered directly to a local DID
+### Default:false
+### NOTE: This is a security feature to prevent spam from unknown sender
+local_direct_delivery_allow_anon = "${LOCAL_DIRECT_DELIVERY_ALLOW_ANON:false}"
 
 ### mediator_secrets: Secrets of the mediator
 ### REQUIRED: Location of secrets
