setting up for webvh method

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
   "crates/affinidi-did-resolver/affinidi-did-resolver-cache-server",
   "crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-example",
   "crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-peer",
+  "crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-webvh",
 
   "crates/affinidi-tdk/common/affinidi-secrets-resolver",
 
@@ -39,12 +40,13 @@ publish = true
 rust-version = "1.85.0"
 
 [workspace.dependencies]
-affinidi-did-resolver-cache-sdk = { version = "0.5.3", path = "crates/affinidi-did-resolver/affinidi-did-resolver-cache-sdk", features = [
+affinidi-did-resolver-cache-sdk = { version = "0.5.4", path = "crates/affinidi-did-resolver/affinidi-did-resolver-cache-sdk", features = [
   "network",
 ] }
-affinidi-did-resolver-cache-server = { version = "0.5.3", path = "crates/affinidi-did-resolver/affinidi-did-resolver-cache-server" }
+affinidi-did-resolver-cache-server = { version = "0.5.4", path = "crates/affinidi-did-resolver/affinidi-did-resolver-cache-server" }
 did-example = { version = "0.5.2", path = "crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-example" }
 did-peer = { version = "0.6.1", path = "crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-peer" }
+did-webvh = { version = "0.1.0", path = "crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-webvh" }
 affinidi-meeting-place = { version = "0.1.9", path = "./crates/affinidi-meeting-place" }
 affinidi-messaging-didcomm = { version = "0.10.7", path = "./crates/affinidi-messaging/affinidi-messaging-didcomm" }
 affinidi-messaging-helpers = { version = "0.10.7", path = "./crates/affinidi-messaging/affinidi-messaging-helpers" }
