--- a/crates/affinidi-did-resolver/affinidi-did-resolver-cache-sdk/Cargo.toml
+++ b/crates/affinidi-did-resolver/affinidi-did-resolver-cache-sdk/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "affinidi-did-resolver-cache-sdk"
-version = "0.5.3"
+version = "0.5.4"
 description = "Affinidi DID Resolver SDK"
 edition.workspace = true
 authors.workspace = true
@@ -19,19 +19,20 @@ crate-type = ["rlib", "cdylib"]
 default = ["local"]
 local = []
 network = [
-    "dep:web-socket",
-    "dep:url",
-    "dep:sha1",
-    "dep:base64",
-    "dep:tokio-rustls",
-    "dep:rustls",
-    "dep:rustls-platform-verifier",
+  "dep:web-socket",
+  "dep:url",
+  "dep:sha1",
+  "dep:base64",
+  "dep:tokio-rustls",
+  "dep:rustls",
+  "dep:rustls-platform-verifier",
 ]
 did_example = ["dep:did-example"]
 
 [dependencies]
 # Affinidi Crates
 did-peer.workspace = true
+did-webvh.workspace = true
 did-example = { workspace = true, optional = true }
 
 # External Crates
@@ -42,8 +43,8 @@ highway = "1.3.0"
 moka = { version = "0.12", features = ["future"] }
 rand = "0.9"
 rustls = { version = "0.23", default-features = false, features = [
-    "aws_lc_rs",
-    "tls12",
+  "aws_lc_rs",
+  "tls12",
 ], optional = true }
 rustls-platform-verifier = { version = "0.5", optional = true }
 serde = { version = "1.0", features = ["derive", "rc"] }
@@ -52,7 +53,7 @@ serde-wasm-bindgen = "0.6.5"
 sha1 = { version = "0.10", optional = true }
 ssi = { version = "0.10", features = ["secp384r1"] }
 thiserror = "2.0"
-tokio = { version = "1.44", features = ["full"] }
+tokio = { version = "1.45", features = ["full"] }
 tokio-rustls = { version = "0.26", optional = true }
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
