--- a/crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-webvh/Cargo.toml
+++ b/crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-webvh/Cargo.toml
@@ -20,6 +20,7 @@ serde = { version = "1.0", features = ["derive", "rc"] }
 serde_json = "1.0"
 ssi = { version = "0.10", features = ["secp384r1"] }
 thiserror = "2.0"
+url = "2.5"
 
 [dev-dependencies]
 tokio = { version = "1.44", features = ["full"] }
