--- a/crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-webvh/Cargo.toml
+++ b/crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-webvh/Cargo.toml
@@ -16,6 +16,7 @@ rust-version.workspace = true
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
+reqwest = "0.12"
 serde = { version = "1.0", features = ["derive", "rc"] }
 serde_json = "1.0"
 ssi = { version = "0.11", features = ["secp384r1"] }
@@ -23,4 +24,6 @@ thiserror = "2.0"
 url = "2.5"
 
 [dev-dependencies]
-tokio = { version = "1.44", features = ["full"] }
+tokio = { version = "1.45", features = ["full"] }
+iref = { version = "3.2.2", features = ["serde"] }
+affinidi-did-resolver-cache-sdk.workspace = true
