--- a/crates/affinidi-tdk/common/affinidi-data-integrity/Cargo.toml
+++ b/crates/affinidi-tdk/common/affinidi-data-integrity/Cargo.toml
@@ -13,9 +13,14 @@ publish.workspace = true
 rust-version.workspace = true
 
 [dependencies]
+base64 = "0.22"
+ed25519-dalek = "2.1"
+multibase = "0.9"
 serde = { version = "1.0", features = ["derive", "rc"] }
 serde_json_canonicalizer = "0.3.0"
+sha2 = "0.10"
 thiserror = "2.0"
+unsigned-varint = "0.8"
 
 [dev-dependencies]
 affinidi-tdk.workspace = true
