--- a/crates/affinidi-messaging/affinidi-messaging-mediator/conf/mediator.toml
+++ b/crates/affinidi-messaging/affinidi-messaging-mediator/conf/mediator.toml
@@ -85,11 +85,21 @@ mediator_acl_mode = "${MEDIATOR_ACL_MODE:explicit_allow}"
 ### global_acl_default: Default ACL that is applied to new/unknown DIDs that connect to the mediator
 ### Default: DENY_ALL,LOCAL,SEND_MESSAGES,RECEIVE_MESSAGES
 ### NOTE: When building a default ACL, the starting point is all actions are denied unless explicitly allowed
+### NOTE: self-changed flags are:
+###    - SEND_MESSAGES
+###    - RECEIVE_MESSAGES
+###    - SEND_FORWARDED
+###    - RECEIVE_FORWARDED
+###    - CREATE_INVITES
+###    - ANON_RECEIVE
+###    - SELF_MANAGE_LIST
+###    - SELF_MANAGE_SEND_QUEUE_LIMIT
+###    - SELF_MANAGE_RECEIVE_QUEUE_LIMIT
 ### Options:
 ###    - ALLOW_ALL: Allow all operations (sets ACL mode to explicit_deny per DID, DID can self manage their own ACLs)
 ###    - DENY_ALL: Deny all operations (sets ACL mode to explicit_allow per DID)
-###    - ALLOW_ALL_SELF_CHANGE: Allows all *_SELF_CHANGE flags (explicitly set when ALLOW_ALL is set)
-###    - DENY_ALL_SELF_CHANGE: Denies all *_SELF_CHANGE flags (explicitly set when DENY_ALL is set)
+###    - ALLOW_ALL_SELF_CHANGE: Allows all self-changed flags (explicitly set when ALLOW_ALL is set)
+###    - DENY_ALL_SELF_CHANGE: Denies all self-changed flags (explicitly set when DENY_ALL is set)
 ###    - MODE_EXPLICIT_ALLOW: Per DID Access Control List (ACL) will only allow what is explicitly allowed
 ###    - MODE_EXPLICIT_DENY: Per DID Access Control List (ACL) will only allow everyone except for those explicitly denied
 ###    - MODE_SELF_CHANGE: Allows the DID owner to change the ACL Mode for their own DID Access Control List
@@ -111,7 +121,6 @@ mediator_acl_mode = "${MEDIATOR_ACL_MODE:explicit_allow}"
 ###    - SELF_MANAGE_RECEIVE_QUEUE_LIMIT: DID can set their receive queue limits (between the queued_messages_soft and queued_messages_hard)
 ###  NOTE: Can be comma separated to allow multiple options. ALLOW_ALL or DENY_ALL must always be first!
 global_acl_default = "${GLOBAL_DEFAULT_ACL:DENY_ALL,LOCAL,SEND_MESSAGES,RECEIVE_MESSAGES}"
-#global_acl_default = "${GLOBAL_DEFAULT_ACL:ALLOW_ALL}"
 
 ### local_direct_delivery_allowed: If true, messages that are addressed to a local DID directly will be delivered
 ### Default: false (all messages must be addressed to the mediator)
