working signing for data integrity

--- a/crates/affinidi-tdk/common/affinidi-data-integrity/Cargo.toml
+++ b/crates/affinidi-tdk/common/affinidi-data-integrity/Cargo.toml
@@ -15,6 +15,7 @@ rust-version.workspace = true
 [dependencies]
 affinidi-tdk-common.workspace = true
 base64 = "0.22"
+chrono = { version = "0.4", features = ["serde"] }
 ed25519-dalek = "2.1"
 multibase = "0.9"
 serde = { version = "1.0", features = ["derive", "rc"] }
