Working up to proof for webvh create

--- a/crates/affinidi-tdk/common/affinidi-data-integrity/Cargo.toml
+++ b/crates/affinidi-tdk/common/affinidi-data-integrity/Cargo.toml
@@ -13,7 +13,7 @@ publish.workspace = true
 rust-version.workspace = true
 
 [dependencies]
-affinidi-tdk-common.workspace = true
+affinidi-secrets-resolver.workspace = true
 base64 = "0.22"
 chrono = { version = "0.4", features = ["serde"] }
 ed25519-dalek = "2.1"
