--- a/crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-webvh/Cargo.toml
+++ b/crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-webvh/Cargo.toml
@@ -16,10 +16,18 @@ rust-version.workspace = true
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
+affinidi-data-integrity.workspace = true
+
 ahash = { version = "0.8", features = ["serde"] }
+chrono = { version = "0.4", features = ["serde"] }
+multibase = "0.9"
+multihash = "0.19"
 reqwest = "0.12"
 serde = { version = "1.0", features = ["derive", "rc"] }
 serde_json = "1.0"
+serde_json_canonicalizer = "0.3.0"
+serde_with = "3.12"
+sha2 = "0.10"
 ssi = { version = "0.11", features = ["secp384r1"] }
 thiserror = "2.0"
 tracing = { version = "0.1", features = [
