feat: licensing updated

--- a/deny.toml
+++ b/deny.toml
@@ -46,24 +46,23 @@ allow = [
 ]
 
 exceptions = [
+    # changed from: { allow = ["MPL-2.0"], crate = "webpki-root-certs" },
+    { allow = ["CDLA-Permissive-2.0"], crate = "webpki-root-certs" },
     { allow = ["OpenSSL"], crate = "aws-lc-sys" },
     { allow = ["MPL-2.0"], crate = "bitmaps" },
     { allow = ["MPL-2.0"], crate = "im" },
     { allow = ["MPL-2.0"], crate = "webpki-roots" },
-    { allow = ["MPL-2.0"], crate = "webpki-root-certs" },
     { allow = ["CC-BY-SA-3.0", "MPL-2.0"], crate = "sized-chunks" },
     # TODO: align
     { allow = ["Unicode-3.0"], crate = "icu_collections" },
-    { allow = ["Unicode-3.0"], crate = "icu_locid" },
-    { allow = ["Unicode-3.0"], crate = "icu_locid_transform" },
-    { allow = ["Unicode-3.0"], crate = "icu_locid_transform_data" },
+    { allow = ["Unicode-3.0"], crate = "icu_locale_core" },
     { allow = ["Unicode-3.0"], crate = "icu_normalizer" },
     { allow = ["Unicode-3.0"], crate = "icu_normalizer_data" },
     { allow = ["Unicode-3.0"], crate = "icu_properties" },
     { allow = ["Unicode-3.0"], crate = "icu_properties_data" },
     { allow = ["Unicode-3.0"], crate = "icu_provider" },
-    { allow = ["Unicode-3.0"], crate = "icu_provider_macros" },
     { allow = ["Unicode-3.0"], crate = "litemap" },
+    { allow = ["Unicode-3.0"], crate = "potential_utf" },
     { allow = ["Apache-2.0 WITH LLVM-exception", "Unicode-3.0"], crate = "target-lexicon" },
     { allow = ["Unicode-3.0"], crate = "tinystr" },
     { allow = ["Unicode-3.0"], crate = "unicode-ident" },
@@ -72,6 +71,7 @@ exceptions = [
     { allow = ["Unicode-3.0"], crate = "yoke-derive" },
     { allow = ["Unicode-3.0"], crate = "zerofrom" },
     { allow = ["Unicode-3.0"], crate = "zerofrom-derive" },
+    { allow = ["Unicode-3.0"], crate = "zerotrie" },
     { allow = ["Unicode-3.0"], crate = "zerovec" },
     { allow = ["Unicode-3.0"], crate = "zerovec-derive" },
 ]
