--- a/crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-webvh/Cargo.toml
+++ b/crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-webvh/Cargo.toml
@@ -17,10 +17,8 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 # cannot use workspace due to cyclic dependencies
-# affinidi-data-integrity.workspace = true
-# affinidi-secrets-resolver.workspace = true
-affinidi-data-integrity = { version = "0.1.1" }
-affinidi-secrets-resolver = { version = "0.1.10" }
+affinidi-data-integrity.workspace = true
+affinidi-secrets-resolver.workspace = true
 
 ahash = { version = "0.8", features = ["serde"] }
 chrono = { version = "0.4", features = ["serde"] }
@@ -41,8 +39,7 @@ tracing = { version = "0.1", features = [
 url = "2.5"
 
 [dev-dependencies]
-# affinidi-tdk.workspace = true
-affinidi-tdk = { version = "0.1.12" }
+affinidi-tdk.workspace = true
 
 anyhow = "1.0"
 console = "0.15"
