Cleaning up unused functions
Signed-off-by: Glenn Gore <glenn.g@affinidi.com>

--- a/crates/affinidi-messaging/affinidi-messaging-text-client/Cargo.toml
+++ b/crates/affinidi-messaging/affinidi-messaging-text-client/Cargo.toml
@@ -26,6 +26,7 @@ anyhow = '1.0'
 base64 = "0.22"
 chrono = "0.4"
 circular-queue = { version = "0.2", features = ["serde_support"] }
+# Crossterm must match the version used in ratatui
 crossterm = { version = "0.28", features = ["event-stream"] }
 image = "0.25"
 log = "0.4"
