Removing SSI crate from affinidi-secrets-resolver
Signed-off-by: Glenn Gore <glenn.g@affinidi.com>

--- a/crates/affinidi-tdk/affinidi-tdk/Cargo.toml
+++ b/crates/affinidi-tdk/affinidi-tdk/Cargo.toml
@@ -28,6 +28,7 @@ affinidi-meeting-place = { workspace = true, optional = true }
 did-peer.workspace = true
 
 # External Crates
+base64 = "0.22"
 clap = { version = "4.5", features = ["derive"] }
 rustls = { version = "0.23", default-features = false, features = [
   "aws_lc_rs",
