--- a/crates/affinidi-tdk/common/affinidi-secrets-resolver/Cargo.toml
+++ b/crates/affinidi-tdk/common/affinidi-secrets-resolver/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "affinidi-secrets-resolver"
 description = "Common utilities for Affinidi Trust Development Kit."
-version = "0.1.14"
+version = "0.1.15"
 edition.workspace = true
 authors.workspace = true
 readme = "README.md"
@@ -22,10 +22,17 @@ multihash = "0.19"
 serde = { version = "1.0", features = ["derive", "rc"] }
 serde_json = "1.0"
 sha2 = "0.10"
-ssi = { version = "0.12" }
+# ssi = { version = "0.12" }
+ssi-multicodec = { version = "0.2", features = [
+  "ed25519",
+  "k256",
+  "p256",
+  "p384",
+] }
 thiserror = "2.0"
-tokio = { version = "1.47", features = ["full"] }
+tokio = { version = "1.47" }
 tracing = { version = "0.1", features = [
   "max_level_debug",
   "release_max_level_info",
 ] }
+zeroize = "1.8"
