--- a/crates/affinidi-meeting-place/Cargo.toml
+++ b/crates/affinidi-meeting-place/Cargo.toml
@@ -23,7 +23,8 @@ chrono = "0.4"
 reqwest = { version = "0.12", features = ["rustls-tls-manual-roots", "json"] }
 serde = { version = "1.0", features = ["derive", "rc"] }
 serde_json = "1.0"
-ssi = "0.12"
+# ssi = "0.12"
+ssi = { path = "https://github.com/stormer78/ssi" }
 thiserror = "2.0"
 tracing = "0.1"
 uuid = { version = "1.18", features = ["v4", "fast-rng"] }
