--- a/crates/affinidi-messaging/affinidi-messaging-mediator/Cargo.toml
+++ b/crates/affinidi-messaging/affinidi-messaging-mediator/Cargo.toml
@@ -59,7 +59,8 @@ semver = "1.0"
 serde = { version = "1.0", features = ["derive", "rc"] }
 serde_json = "1.0"
 sha256 = "1.6"
-ssi = { version = "0.12" }
+# ssi = { version = "0.12" }
+ssi = { path = "https://github.com/stormer78/ssi" }
 subtle = "2.6"
 tokio = { version = "1.47", features = ["full"] }
 tokio-stream = "0.1"
