--- a/crates/affinidi-messaging/affinidi-messaging-sdk/Cargo.toml
+++ b/crates/affinidi-messaging/affinidi-messaging-sdk/Cargo.toml
@@ -31,7 +31,8 @@ rustls-pemfile = "2"
 serde = { version = "1.0", features = ["derive", "rc"] }
 serde_json = "1.0"
 sha256 = "1.6"
-ssi = { version = "0.12" }
+# ssi = { version = "0.12" }
+ssi = { path = "https://github.com/stormer78/ssi" }
 thiserror = "2.0"
 tokio = { version = "1.47", features = ["full"] }
 tokio-tungstenite = { version = "0.27", features = ["rustls-tls-native-roots"] }
