--- a/crates/affinidi-messaging/affinidi-messaging-text-client/Cargo.toml
+++ b/crates/affinidi-messaging/affinidi-messaging-text-client/Cargo.toml
@@ -38,7 +38,8 @@ reqwest = { version = "0.12", features = ["rustls-tls-manual-roots", "json"] }
 serde = { version = "1.0", features = ["derive", "rc"] }
 serde_json = "1.0"
 sha256 = "1.6"
-ssi = { version = "0.12" }
+# ssi = { version = "0.12" }
+ssi = { path = "https://github.com/stormer78/ssi" }
 textwrap = "0.16"
 tokio = { version = "1.47", features = ["full"] }
 tokio-stream = "0.1"
