--- a/crates/affinidi-tdk/common/affinidi-did-authentication/Cargo.toml
+++ b/crates/affinidi-tdk/common/affinidi-did-authentication/Cargo.toml
@@ -22,7 +22,8 @@ chrono = "0.4"
 reqwest = { version = "0.12", features = ["rustls-tls-manual-roots", "json"] }
 serde = { version = "1.0", features = ["derive", "rc"] }
 serde_json = "1.0"
-ssi = { version = "0.12" }
+# ssi = { version = "0.12" }
+ssi = { path = "https://github.com/stormer78/ssi" }
 thiserror = "2.0"
 tokio = { version = "1.47", features = ["full"] }
 tracing = { version = "0.1", features = [
