--- a/crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-peer/Cargo.toml
+++ b/crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-peer/Cargo.toml
@@ -16,16 +16,20 @@ rust-version.workspace = true
 crate-type = ["cdylib", "rlib"]
 
 [dependencies]
+affinidi-did-common.workspace = true
+
 base64 = "0.22"
-iref = { version = "3.2.2", features = ["serde"] }
+# iref = { version = "3.2.2", features = ["serde"] }
 serde = { version = "1.0", features = ["derive", "rc"] }
 serde_json = "1.0"
-# ssi = { version = "0.12", features = ["secp384r1"] }
-ssi-core = { version = "0.2.3" }
-ssi-dids-core = { version = "0.1.3" }
-ssi-jwk = { version = "0.3.2", features = ["secp384r1"] }
-did-method-key = { version = "0.3.1", features = ["secp384r1"] }
+ssi-core = { git = "https://github.com/stormer78/ssi" }
+ssi-dids-core = { git = "https://github.com/stormer78/ssi" }
+ssi-jwk = { git = "https://github.com/stormer78/ssi", features = ["secp384r1"] }
+did-method-key = { git = "https://github.com/stormer78/ssi", features = [
+  "secp384r1",
+] }
 thiserror = "2.0"
+url = "2.5"
 wasm-bindgen = "0.2"
 wasm-bindgen-futures = "0.4"
 
@@ -33,7 +37,7 @@ wasm-bindgen-futures = "0.4"
 #uuid = { version = "1.16", features = ["v4", "fast-rng", "js"] }
 
 [dev-dependencies]
-ssi-multicodec = "0.2.0"
+ssi-multicodec = { git = "https://github.com/stormer78/ssi" }
 askar-crypto = { version = "0.3", features = ["alloc"] }
 tokio = { version = "1.47", features = ["full"] }
 multibase = "0.9.1"
