--- a/crates/affinidi-tdk/common/affinidi-secrets-resolver/Cargo.toml
+++ b/crates/affinidi-tdk/common/affinidi-secrets-resolver/Cargo.toml
@@ -12,13 +12,23 @@ repository.workspace = true
 publish.workspace = true
 rust-version.workspace = true
 
+[features]
+default = ["p256", "k256", "p384", "ed25519"]
+p256 = ["dep:p256"]
+k256 = ["dep:k256"]
+p384 = ["dep:p384"]
+ed25519 = ["dep:ed25519-dalek"]
+
 [dependencies]
 ahash = "0.8"
 base58 = "0.2"
 base64 = "0.22"
-ed25519-dalek = { version = "2.2", features = ["rand_core"] }
+ed25519-dalek = { version = "2.2", features = ["rand_core"], optional = true }
+k256 = { version = "0.13", features = ["ecdsa-core"], optional = true }
 multibase = "0.9"
 multihash = "0.19"
+p256 = { version = "0.13", features = ["ecdsa-core"], optional = true }
+p384 = { version = "0.13", features = ["ecdsa-core"], optional = true }
 rand = "0.8" # Version conflict because of ed25519-dalek (2.2.0)
 serde = { version = "1.0", features = ["derive", "rc"] }
 serde_json = "1.0"
