--- a/crates/affinidi-did-resolver/affinidi-did-resolver-cache-sdk/Cargo.toml
+++ b/crates/affinidi-did-resolver/affinidi-did-resolver-cache-sdk/Cargo.toml
@@ -28,6 +28,7 @@ network = [
   "dep:rustls-platform-verifier",
 ]
 did_example = ["dep:did-example"]
+did-jwk = ["dep:did-jwk"]
 
 [dependencies]
 # Affinidi Crates
@@ -54,7 +55,7 @@ serde_json = "1.0"
 serde-wasm-bindgen = "0.6.5"
 sha1 = { version = "0.10", optional = true }
 did-ethr = "0.3.2"
-did-jwk = "0.2.1"
+did-jwk = { version = "0.2.1", optional = true }
 did-pkh = "0.3.2"
 did-web = "0.3.4"
 ssi-dids-core = "0.1.3"
@@ -69,7 +70,7 @@ wasm-bindgen-futures = "0.4"
 web-socket = { version = "0.7", optional = true }
 
 [dev-dependencies]
-ssi-jwk = "0.3.2"
+affinidi-secrets-resolver.workspace = true
 url = "2.5"
 clap = { version = "4.5", features = ["derive"] }
 num-format = "0.4.4"
