--- a/crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-peer/Cargo.toml
+++ b/crates/affinidi-did-resolver/affinidi-did-resolver-methods/did-peer/Cargo.toml
@@ -17,15 +17,12 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 affinidi-did-common.workspace = true
+affinidi-did-key.workspace = true
+affinidi-secrets-resolver.workspace = true
 
 base64 = "0.22"
-# iref = { version = "3.2.2", features = ["serde"] }
 serde = { version = "1.0", features = ["derive", "rc"] }
 serde_json = "1.0"
-ssi-core = "0.2.3"
-ssi-dids-core = "0.1.3"
-ssi-jwk = "0.3.2"
-did-method-key = { version = "0.3.1", features = ["secp384r1"] }
 thiserror = "2.0"
 url = "2.5"
 wasm-bindgen = "0.2"
