--- a/crates/affinidi-messaging/affinidi-messaging-helpers/Cargo.toml
+++ b/crates/affinidi-messaging/affinidi-messaging-helpers/Cargo.toml
@@ -25,9 +25,11 @@ path = "src/mediator_administration/main.rs"
 affinidi-did-resolver-cache-sdk = { workspace = true, features = [
   "did_example",
 ] }
+affinidi-did-common.workspace = true
 affinidi-messaging-didcomm.workspace = true
 affinidi-messaging-sdk.workspace = true
 affinidi-tdk.workspace = true
+affinidi-did-key.workspace = true
 did-peer.workspace = true
 
 ahash = { version = "0.8", features = ["serde"] }
@@ -45,8 +47,6 @@ ring = { version = "0.17", features = ["std"] }
 serde = { version = "1.0", features = ["derive", "rc"] }
 serde_json = "1.0"
 sha256 = "1.6"
-# ssi = { version = "0.12" }
-ssi = { git = "https://github.com/stormer78/ssi" }
 time = "0.3"
 tokio = { version = "1.47", features = ["full"] }
 toml = "0.9"
