--- a/crates/affinidi-messaging/affinidi-messaging-mediator/Cargo.toml
+++ b/crates/affinidi-messaging/affinidi-messaging-mediator/Cargo.toml
@@ -23,14 +23,15 @@ affinidi-messaging-didcomm.workspace = true
 affinidi-messaging-mediator-processors.workspace = true
 affinidi-messaging-mediator-common.workspace = true
 affinidi-did-resolver-cache-sdk.workspace = true
+affinidi-did-common.workspace = true
 affinidi-secrets-resolver.workspace = true
 
 # External Crates
 ahash = { version = "0.8", features = ["serde"] }
 async-convert = "1"
 aws-config = "1.8"
-aws-sdk-secretsmanager = "1.87"
-aws-sdk-ssm = "1.92"
+aws-sdk-secretsmanager = "1.88"
+aws-sdk-ssm = "1.94"
 axum = { version = "0.8", features = ["ws"] }
 axum-extra = { version = "0.10", features = ["typed-header"] }
 axum-server = { version = "0.7", features = ["tls-rustls"] }
@@ -59,8 +60,6 @@ semver = "1.0"
 serde = { version = "1.0", features = ["derive", "rc"] }
 serde_json = "1.0"
 sha256 = "1.6"
-# ssi = { version = "0.12" }
-ssi = { git = "https://github.com/stormer78/ssi" }
 subtle = "2.6"
 tokio = { version = "1.47", features = ["full"] }
 tokio-stream = "0.1"
