--- a/crates/affinidi-messaging/affinidi-messaging-sdk/Cargo.toml
+++ b/crates/affinidi-messaging/affinidi-messaging-sdk/Cargo.toml
@@ -17,6 +17,7 @@ repository.workspace = true
 affinidi-tdk-common.workspace = true
 affinidi-messaging-didcomm.workspace = true
 affinidi-did-authentication.workspace = true
+affinidi-did-common.workspace = true
 
 # External Crates
 ahash = { version = "0.8", features = ["serde"] }
@@ -31,11 +32,9 @@ rustls-pemfile = "2"
 serde = { version = "1.0", features = ["derive", "rc"] }
 serde_json = "1.0"
 sha256 = "1.6"
-# ssi = { version = "0.12" }
-ssi = { git = "https://github.com/stormer78/ssi" }
 thiserror = "2.0"
 tokio = { version = "1.47", features = ["full"] }
-tokio-tungstenite = { version = "0.27", features = ["rustls-tls-native-roots"] }
+tokio-tungstenite = { version = "0.28", features = ["rustls-tls-native-roots"] }
 tracing = { version = "0.1", features = [
   "max_level_debug",
   "release_max_level_info",
