--- a/crates/affinidi-tdk/affinidi-tdk/Cargo.toml
+++ b/crates/affinidi-tdk/affinidi-tdk/Cargo.toml
@@ -19,6 +19,7 @@ meeting-place = ["dep:affinidi-meeting-place"]
 
 [dependencies]
 affinidi-did-resolver-cache-sdk.workspace = true
+affinidi-did-common.workspace = true
 affinidi-messaging-sdk = { workspace = true, optional = true }
 affinidi-messaging-didcomm.workspace = true
 affinidi-did-authentication.workspace = true
@@ -26,6 +27,7 @@ affinidi-tdk-common.workspace = true
 affinidi-secrets-resolver.workspace = true
 affinidi-meeting-place = { workspace = true, optional = true }
 did-peer.workspace = true
+affinidi-did-key.workspace = true
 
 # External Crates
 base64 = "0.22"
@@ -35,8 +37,6 @@ rustls = { version = "0.23", default-features = false, features = [
   "tls12",
 ] }
 serde_json = "1.0"
-# ssi = { version = "0.12" }
-ssi = { git = "https://github.com/stormer78/ssi" }
 tokio = { version = "1.47", features = ["full"] }
 tracing = { version = "0.1", features = [
   "max_level_debug",
